--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/fondo"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/conoce_tu_futuro"
-        android:textColor="#6633FF"
+        android:text="Revela tu destino"
+        android:textColor="#000000"
         android:textSize="30sp"
         android:textStyle="bold|italic"
         android:layout_margin="40dp" />
@@ -23,29 +26,37 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:textSize="24sp"
-    android:hint="@string/escribe_tu_mensaje"
+    android:hint="escribe tu consulta"
     android:inputType="textShortMessage"
     android:autofillHints="" />
 
-<ImageButton
-    android:id="@+id/btn"
-    android:layout_width="303dp"
-    android:layout_height="258dp"
-    android:layout_gravity="center"
-    android:layout_marginTop="40dp"
-    android:src="@drawable/bola"
-    android:contentDescription="@string/todo" />
+    <ImageButton
+        android:id="@+id/btn"
+        android:layout_width="257dp"
+        android:layout_height="211dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:contentDescription="@string/todo"
+        android:src="@drawable/bola" />
+
     <TextView
-        android:id="@+id/respuesta"
+        android:id="@+id/respuestavista"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="26sp"
-        android:layout_margin="60dp"
-        android:textColor="#797676"
+        android:layout_margin="40dp"
+        android:text=""
+        android:textColor="#000000"
+        android:textSize="15sp"
         android:textStyle="bold"
-        android:text="..."
-        />
+        android:autofillHints=""/>
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/dedito" />
 
 </LinearLayout>
